# hasher

./: Cargo.toml
src/: hash_sm3.rs
